--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.26"
 futures = "0.3.28"
 k8s-openapi = { version = "0.18.0", features = ["v1_25"] }
 kube = { version = "0.83.0", features = ["runtime", "client", "derive"] }
