--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,11 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+
+    - name: Configure Git
+      run: |
+        git config user.name "$GITHUB_ACTOR"
+        git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
     
     - name: Update version in Chart.yaml and in Cargo.toml
       run: |
@@ -38,11 +43,6 @@ jobs:
       run: |
         docker build . --file Dockerfile --tag ghcr.io/its4u/cert-manager-routes-controller:${{  github.ref_name }}
         docker push ghcr.io/its4u/cert-manager-routes-controller:${{  github.ref_name }}
- 
-    - name: Configure Git for Helm
-      run: |
-        git config user.name "$GITHUB_ACTOR"
-        git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
     - name: Install Helm
       uses: azure/setup-helm@v3
