--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,11 @@ jobs:
         sed -i "0,/version = .*/s//version = \"{{ github.ref_name }}\"/" ./ctrl/Cargo.toml
         git add .
         git commit -m "Update version to ${{ github.ref_name }}"
-        git push origin HEAD:${{ github.ref }}
+        git push origin HEAD:main
+        git tag -d ${{ github.ref_name }}
+        git push origin ${{ github.ref }}
+        git tag ${{ github.ref_name }}
+        git push origin ${{ github.ref_name }}
     
     - name: Checkout code
       uses: actions/checkout@v3
