--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
         git commit -m "Update version to ${{ github.ref_name }}"
         git push origin HEAD:main
         git tag -d ${{ github.ref_name }}
-        git push origin ${{ github.ref }}
+        git push origin :refs/tags/${{ github.ref_name }}
         git tag ${{ github.ref_name }}
         git push origin ${{ github.ref_name }}
     
