--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,11 +27,12 @@ jobs:
         sed -i "0,/version = .*/s//version = \"{{ github.ref_name }}\"/" ./ctrl/Cargo.toml
         git add .
         git commit -m "Update version to ${{ github.ref_name }}"
-        git push origin HEAD:main
+        git push origin main
         git tag -d ${{ github.ref_name }}
         git push origin :refs/tags/${{ github.ref_name }}
-        git tag -f ${{ github.ref_name }}
-        git push -f origin ${{ github.ref_name }}
+        git checkout main
+        git tag ${{ github.ref_name }}
+        git push origin ${{ github.ref_name }}
     
     - name: Checkout code
       uses: actions/checkout@v3
