--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,12 +25,14 @@ jobs:
         sed -i "s/version: .*/version: \"${{ github.ref_name }}\"/g" ./charts/Chart.yaml
         sed -i "s/appVersion: .*/version: \"${{ github.ref_name }}\"/g" ./charts/Chart.yaml
         sed -i "0,/version = .*/s//version = \"{{ github.ref_name }}\"/" ./ctrl/Cargo.toml
-        git add .
-        git commit -m "Update version to ${{ github.ref_name }}"
-        git push origin main
         git tag -d ${{ github.ref_name }}
         git push origin :refs/tags/${{ github.ref_name }}
+        git branch tmp
+        git add .
+        git commit -m "Update version to ${{ github.ref_name }}"
         git checkout main
+        git merge tmp
+        git push origin main
         git tag ${{ github.ref_name }}
         git push origin ${{ github.ref_name }}
     
