--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,11 +27,8 @@ jobs:
         sed -i "0,/version = .*/s//version = \"{{ github.ref_name }}\"/" ./ctrl/Cargo.toml
         git tag -d ${{ github.ref_name }}
         git push origin :refs/tags/${{ github.ref_name }}
-        git branch tmp
-        git add .
+        git add -A
         git commit -m "Update version to ${{ github.ref_name }}"
-        git checkout main
-        git merge tmp
         git push origin main
         git tag ${{ github.ref_name }}
         git push origin ${{ github.ref_name }}
