--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,16 +25,14 @@ jobs:
         sed -i "s/version: .*/version: \"${{ github.ref_name }}\"/g" ./charts/Chart.yaml
         sed -i "s/appVersion: .*/version: \"${{ github.ref_name }}\"/g" ./charts/Chart.yaml
         sed -i "0,/version = .*/s//version = \"{{ github.ref_name }}\"/" ./ctrl/Cargo.toml
-        git branch tmp
-        git checkout main
-        git merge tmp
-        git branch -d tmp
-        git add -A
-        git commit -m "Update version to ${{ github.ref_name }}"
-        git push origin main
     
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - name: Commit modified files
+      uses: EndBug/add-and-commit@v9.1.3
+      with:
+        add: '-A'
+        message: 'Update version to ${{ github.ref_name }}'
+        tag: '${{ github.ref_name }} --force'
+        tag_push: '--force'
         
     - name: 'Login to GitHub Container Registry'
       uses: docker/login-action@v1
