--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,18 +23,13 @@ jobs:
     - name: Update version in Chart.yaml and in Cargo.toml
       run: |
         sed -i "s/version: .*/version: \"${{ github.ref_name }}\"/g" ./charts/Chart.yaml
-        sed -i "s/appVersion: .*/version: \"${{ github.ref_name }}\"/g" ./charts/Chart.yaml
-        sed -i "0,/version = .*/s//version = \"{{ github.ref_name }}\"/" ./ctrl/Cargo.toml
-    
-    - name: debug
-      run: |
-        cat ./charts/Chart.yaml
-        cat ./ctrl/Cargo.toml
-    
+        sed -i "s/appVersion: .*/appVersion: \"${{ github.ref_name }}\"/g" ./charts/Chart.yaml
+        sed -i "0,/version = .*/s//version = \"${{ github.ref_name }}\"/" ./ctrl/Cargo.toml
+
     - name: Commit modified files
       uses: EndBug/add-and-commit@v9.1.3
       with:
-        add: 'charts/Chart.yaml ctrl/Cargo.toml'
+        add: '-f charts/Chart.yaml ctrl/Cargo.toml'
         message: 'Update version to ${{ github.ref_name }}'
         tag: '${{ github.ref_name }} --force'
         tag_push: '--force'
