--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,7 @@ jobs:
         message: 'Update version to ${{ github.ref_name }}'
         tag: '${{ github.ref_name }} --force'
         tag_push: '--force'
+        push: "origin HEAD:main"     
         
     - name: 'Login to GitHub Container Registry'
       uses: docker/login-action@v1
