--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v2
 name: cert-manager-routes-controller
 description: The power of `cert-manger` unleashed for OpenShift routes
 type: application
-version: "v0.9.9-beta.3"
-version: "v0.9.9-beta.3"
+version: "0.9.9-beta.4"
+version: "0.9.9-beta.4"
