--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -3,4 +3,4 @@ name: cert-manager-routes-controller
 description: The power of `cert-manger` unleashed for OpenShift routes
 type: application
 version: "0.9.9-beta.4"
-version: "0.9.9-beta.4"
+appVersion: "0.9.9-beta.4"
