Delete tag since helm chart releaser will recreate it

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,11 @@ jobs:
         git config user.name "$GITHUB_ACTOR"
         git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
     
+    - name: Delete tag
+      run: |
+        git tag -d ${{ github.ref_name }}
+        git push origin :refs/tags/${{ github.ref_name }}
+    
     - name: Assign version without leading `v`to VERSION env
       run: echo VERSION=`echo "${{ github.ref_name }}" | sed -e 's/^v//'` >> $GITHUB_ENV
     
@@ -34,8 +39,6 @@ jobs:
       with:
         add: '-f charts/Chart.yaml ctrl/Cargo.toml'
         message: 'Update version to ${{ github.ref_name }}'
-        tag: '${{ github.ref_name }} --force'
-        tag_push: '--force'
         push: "origin HEAD:main"     
         
     - name: 'Login to GitHub Container Registry'
@@ -52,9 +55,10 @@ jobs:
 
     - name: Install Helm
       uses: azure/setup-helm@v3
-
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
     - name: Run chart-releaser
       uses: helm/chart-releaser-action@v1.5.0
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
