--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,12 @@ name: Publish a new release
 
 on:
   push:
-    tags:
-      - "v*"
-      
+    branches:
+      - "main"
+  pull_request:
+    branches:
+      - "main"
+
 jobs:
 
   realease:
@@ -14,19 +17,14 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+    
+    - name: Get version
+      run: echo "VERSION=`cat VERSION`" >> $GITHUB_ENV
 
     - name: Configure Git
       run: |
         git config user.name "$GITHUB_ACTOR"
         git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-
-    - name: Delete tag
-      run: |
-        git tag -d ${{ github.ref_name }}
-        git push origin :refs/tags/${{ github.ref_name }}
-    
-    - name: Assign version without leading `v`to VERSION env
-      run: echo VERSION=`echo "${{ github.ref_name }}" | sed -e 's/^v//'` >> $GITHUB_ENV
     
     - name: Update version in Chart.yaml and in Cargo.toml
       run: |
@@ -38,7 +36,7 @@ jobs:
       uses: EndBug/add-and-commit@v9.1.3
       with:
         add: '-f charts/Chart.yaml ctrl/Cargo.toml'
-        message: 'Update version to ${{ github.ref_name }}'
+        message: 'Update version to ${{ env.VERSION }}'
         push: "origin HEAD:main"     
         
     - name: 'Login to GitHub Container Registry'
