--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,10 @@ jobs:
       with:
         add: '-f charts/Chart.yaml ctrl/Cargo.toml'
         message: 'Update version to ${{ env.VERSION }}'
-        push: "origin HEAD:main"     
+        push: "origin HEAD:main"
+  
+    - name: Checkout code
+      uses: actions/checkout@v3
         
     - name: 'Login to GitHub Container Registry'
       uses: docker/login-action@v1
