--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
 
-  realease:
+  update-version:
 
     runs-on: ubuntu-latest
 
@@ -38,7 +38,13 @@ jobs:
         add: '-f charts/Chart.yaml ctrl/Cargo.toml'
         message: 'Update version to ${{ env.VERSION }}'
         push: "origin HEAD:main"
-  
+
+  release:
+
+    needs: update-version
+    runs-on: ubuntu-latest
+
+    steps:
     - name: Checkout code
       uses: actions/checkout@v3
         
