--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0 
     
     - name: Get version
       run: echo "VERSION=`cat VERSION`" >> $GITHUB_ENV
@@ -38,6 +40,11 @@ jobs:
         add: '-f charts/Chart.yaml ctrl/Cargo.toml'
         message: 'Update version to ${{ env.VERSION }}'
         push: "origin HEAD:main"
+
+    - name: Checkout code
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0 
 
     - name: 'Login to GitHub Container Registry'
       uses: docker/login-action@v1
