--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v2
 name: cert-manager-routes-controller
 description: The power of `cert-manger` unleashed for OpenShift routes
 type: application
-version: "0.9.9-beta.16"
-appVersion: "0.9.9-beta.16"
+version: "1.0.0"
+appVersion: "1.0.0"
