--- a/ctrl/Cargo.toml
+++ b/ctrl/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cert-manager-routes-controller"
-version = "0.9.9-beta.16"
+version = "1.0.0"
 edition = "2021"
 
 [dependencies]
