Fix selector labels for the deployment

--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -6,6 +6,9 @@ metadata:
   labels:
     {{- include "chart.labels" . | nindent 4 }}
 spec:
+  selector:
+    matchLabels:
+      {{- include "chart.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
