Publish events instead of only printing messages, closes #25

--- a/charts/templates/clusterrole.yaml
+++ b/charts/templates/clusterrole.yaml
@@ -42,3 +42,10 @@ rules:
       - ''
     resources:
       - secrets
+  - apiGroups: 
+      - "events.k8s.io"
+    resources: 
+      - "events"
+    verbs: 
+      - "create"
+
