Add step to format code on release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,12 +32,17 @@ jobs:
         sed -i "s/version: .*/version: \"${{ env.VERSION }}\"/g" ./charts/Chart.yaml
         sed -i "s/appVersion: .*/appVersion: \"${{ env.VERSION }}\"/g" ./charts/Chart.yaml
         sed -i "0,/version = .*/s//version = \"${{ env.VERSION }}\"/" ./ctrl/Cargo.toml
-
+    
+    - name: Format code
+      run: |
+        cargo fmt --manifest-path ./ctrl/Cargo.toml
+        helm lint ./charts
+    
     - name: Commit modified files
       uses: EndBug/add-and-commit@v9.1.3
       with:
         add: '-f charts/Chart.yaml ctrl/Cargo.toml'
-        message: 'Update version to ${{ env.VERSION }}'
+        message: 'Update version to ${{ env.VERSION }} and format code'
         push: "origin HEAD:main"
 
     - name: 'Login to GitHub Container Registry'
