Add requests in deployment and add memory to hpa, fix #32

--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -16,6 +16,10 @@ spec:
     spec:
       serviceAccountName: {{ .Values.serviceAccount.name }}
       containers:
+        - resources:
+            requests:
+              cpu: {{ .Values.requests.cpu }}
+              memory: {{ .Values.requests.memory }}
         - name: {{ include "chart.fullname" . }}
           image: "{{ .Values.image.repository }}:{{ .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
