--- a/charts/templates/hpa.yaml
+++ b/charts/templates/hpa.yaml
@@ -19,5 +19,9 @@ spec:
         target:
           type: Utilization
           averageUtilization: {{ .Values.autoscaling.targetCPUUtilizationPercentage }}
-
-
+    - type: Resource
+      resource:
+        name: memory
+        target:
+          type: AverageValue
+          averageUtilization: {{ .Values.autoscaling.targetMemoryUtilizationPercentage }}
