Remove useless HPA

--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -16,11 +16,7 @@ spec:
     spec:
       serviceAccountName: {{ .Values.serviceAccount.name }}
       containers:
-        - resources:
-            requests:
-              cpu: {{ .Values.requests.cpu }}
-              memory: {{ .Values.requests.memory }}
-          name: {{ include "chart.fullname" . }}
+        - name: {{ include "chart.fullname" . }}
           image: "{{ .Values.image.repository }}:{{ .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
